--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,11 @@
-
+spring:
+  application:
+    name: account-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/bank_management
+    username: root
+    password: saurav 
+  jpa:
+    hibernate:
+      ddl-auto: update
+    generate-ddl: true
